2008-02-13  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Adam.

        Make svg/dynamic-updates/* tests deterministic. s/setTimeout('executTest()', 0)/executeTest/ -- as discussed with Adam.

        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-dom-cx-attr-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-dom-cx-attr-expected.png:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-dom-cy-attr-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-dom-cy-attr-expected.png:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-dom-r-attr-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-dom-r-attr-expected.png:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-svgdom-cx-prop-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-svgdom-cx-prop-expected.png:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-svgdom-cy-prop-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-svgdom-cy-prop-expected.png:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-svgdom-r-prop-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGCircleElement-svgdom-r-prop-expected.png:
        * platform/mac-leopard/svg/dynamic-updates/SVGClipPathElement-dom-clipPathUnits-attr-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGClipPathElement-dom-clipPathUnits-attr-expected.png:
        * platform/mac-leopard/svg/dynamic-updates/SVGClipPathElement-svgdom-clipPathUnits-prop-expected.checksum:
        * platform/mac-leopard/svg/dynamic-updates/SVGClipPathElement-svgdom-clipPathUnits-prop-expected.png:
        * svg/dynamic-updates/SVGCircleElement-dom-cx-attr-expected.txt:
        * svg/dynamic-updates/SVGCircleElement-dom-cy-attr-expected.txt: