@@ -1,0 +1,12 @@
+<p>This tests deleting a selection that ends just before a space. There was a bug where it would be treated like a smart delete (the space would be incorrectly removed).  To run it outside of DRT, you must delete manually.  Press delete and you should see "Th is a test".</p>
+<div id="div" contenteditable="true">This is a test.</div>
+
+<script>
+if (window.layoutTestController)
+    window.layoutTestController.dumpAsText();
+
+text = document.getElementById("div").firstChild;
+window.getSelection().setBaseAndExtent(text, 2, text, 4);
+if (window.eventSender)
+    eventSender.keyDown("delete");
+</script>
